Reading config is much better now
It also supports the two modes and now contains the secrets (instead of throwing them in a seperate file)

--- a/config.json
+++ b/config.json
@@ -12,9 +12,13 @@
         "twilio": false
     },
     "telegram_config" : {
+        "token": "",
+        "password": "",
         "tick_frequency" : 60
     },
     "twilio_config" : {
-        "call_reciver": "+9725XXXXXXXX"
+        "sid": "",
+        "auth": "",
+        "call_receiver": "+9725XXXXXXXX"
     }
 }
